@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,6 +23,7 @@
 
 /**
  * @test SharedBaseAddress
+ * @bug 8265705 8267351
  * @summary Test variety of values for SharedBaseAddress, making sure
  *          VM handles normal values as well as edge values w/o a crash.
  * @requires vm.cds
@@ -32,6 +33,7 @@
 
 import jdk.test.lib.cds.CDSTestUtils;
 import jdk.test.lib.cds.CDSOptions;
+import jdk.test.lib.Platform;
 import jdk.test.lib.process.OutputAnalyzer;
 
 public class SharedBaseAddress {
@@ -47,6 +49,8 @@ public class SharedBaseAddress {
         "0xffffffffffffffff", // archive bottom wraps around 64-bit address space -- due to align_up()
         "0xffffffff",         // archive bottom wraps around 32-bit address space -- due to align_up()
         "0x00007ffffff00000", // end of archive will go past the end of user space on linux/x64
+        "0x500000000",        // (20g) below 32g at a 4g aligned address, but cannot be expressed with a logical
+                              //    immediate on aarch64 (0x5_0000_0000) (see JDK-8265705)
         "0",                  // always let OS pick the base address at runtime (ASLR for CDS archive)
     };
 
@@ -55,24 +59,38 @@ public class SharedBaseAddress {
 
     public static void main(String[] args) throws Exception {
 
-        for (String testEntry : testTable) {
-            String filename = "SharedBaseAddress" + testEntry + ".jsa";
-            System.out.println("sharedBaseAddress = " + testEntry);
-            CDSOptions opts = (new CDSOptions())
-                .setArchiveName(filename)
-                .addPrefix("-XX:SharedBaseAddress=" + testEntry)
-                .addPrefix("-Xlog:cds=debug")
-                .addPrefix("-Xlog:cds+reloc=debug")
-                .addPrefix("-Xlog:nmt=debug")
-                .addPrefix("-Xlog:os=debug")
-                .addPrefix("-XX:NativeMemoryTracking=detail");
+        for (int run = 0; run < 2; run ++) {
+            // We run twice:
+            // Once, where we want to increase the chance that mapping the generated archive at the designated base
+            // succeeds, to test Klass pointer encoding at that weird location. We do this by sizing heap + class space
+            // small, and by switching off compressed oops.
+            // On the second run, we don't do this but instead go with default parameters. This is more of a test of
+            // CDS' ability to recover if mapping at runtime fails.
+            for (String testEntry : testTable) {
+                String filename = "SharedBaseAddress-base" + testEntry + "-run" + run + ".jsa";
+                System.out.println("sharedBaseAddress = " + testEntry);
+                CDSOptions opts = (new CDSOptions())
+                        .setArchiveName(filename)
+                        .addPrefix("-XX:SharedBaseAddress=" + testEntry)
+                        .addPrefix("-Xlog:cds=debug")
+                        .addPrefix("-Xlog:cds+reloc=debug")
+                        .addPrefix("-Xlog:nmt=debug")
+                        .addPrefix("-Xlog:os=debug")
+                        .addPrefix("-Xlog:gc+metaspace")
+                        .addPrefix("-XX:NativeMemoryTracking=detail");
 
-            CDSTestUtils.createArchiveAndCheck(opts);
-            OutputAnalyzer out = CDSTestUtils.runWithArchiveAndCheck(opts);
-            if (testEntry.equals("0")) {
-              out.shouldContain("Archive(s) were created with -XX:SharedBaseAddress=0. Always map at os-selected address.")
-                 .shouldContain("Try to map archive(s) at an alternative address")
-                 .shouldNotMatch(failedPattern);
+                if (run == 0 && Platform.is64bit()) {
+                    opts.addPrefix("-Xmx128m")
+                        .addPrefix("-XX:CompressedClassSpaceSize=32m")
+                        .addPrefix("-XX:-UseCompressedOops");
+                }
+                CDSTestUtils.createArchiveAndCheck(opts);
+                OutputAnalyzer out = CDSTestUtils.runWithArchiveAndCheck(opts);
+                if (testEntry.equals("0")) {
+                    out.shouldContain("Archive(s) were created with -XX:SharedBaseAddress=0. Always map at os-selected address.")
+                            .shouldContain("Try to map archive(s) at an alternative address")
+                            .shouldNotMatch(failedPattern);
+                }
             }
         }
     }
