@@ -32,10 +32,10 @@
  * @run clean NotificationEmissionTest
  * @run build NotificationEmissionTest
  * @run main NotificationEmissionTest 1
- * @run main NotificationEmissionTest 2
- * @run main NotificationEmissionTest 3
- * @run main NotificationEmissionTest 4
- * @run main NotificationEmissionTest 5
+ * @run main/othervm -Djava.security.manager=allow NotificationEmissionTest 2
+ * @run main/othervm -Djava.security.manager=allow NotificationEmissionTest 3
+ * @run main/othervm -Djava.security.manager=allow NotificationEmissionTest 4
+ * @run main/othervm -Djava.security.manager=allow NotificationEmissionTest 5
  */
 
 import java.io.File;
